[project]
name = "stage-plot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ryan",email = "github@rtrichter.com"},
]
dependencies = ["flask>=3.1.3"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
